# square_root_without_lib

./: .gitignore  CMakeLists.txt  CMakePresents.json  README.md
src/: main.cpp
